src/QToolButton.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQToolButtonCtor(void * parent);
EXTERNC void * SCWQToolButtonCtor(void * parent);
EXTERNC void * QWQToolButtonsizeHint(void * obj);
EXTERNC void * QWQToolButtonminimumSizeHint(void * obj);
EXTERNC int QWQToolButtonarrowType(void * obj);
EXTERNC void QWQToolButtonsetMenu(void * obj, void * menu);
EXTERNC void * QWQToolButtonmenu(void * obj);
EXTERNC int QWQToolButtonpopupMode(void * obj);
EXTERNC void * QWQToolButtondefaultAction(void * obj);
EXTERNC void QWQToolButtonsetAutoRaise(void * obj, int8_t  enable);
EXTERNC int8_t QWQToolButtonautoRaise(void * obj);
EXTERNC void QWQToolButtonshowMenu(void * obj);
EXTERNC void QWQToolButtonsetDefaultAction(void * obj, void * arg1);
EXTERNC void QWvalidateCB_QToolButton(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQToolButtonDtor(void *);
EXTERNC void SCWQToolButtonDtor(void *);